--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "Roger Madjos <roger.madjos@gmal.com>",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.0",
+    "express": "^4.13.3",
     "feedparser": "^1.1.4",
     "lodash": "^3.10.1",
+    "multiline": "^1.0.2",
+    "mysql": "^2.9.0",
     "request": "^2.65.0"
+  },
+  "devDependencies": {
+    "db-migrate": "^0.9.23"
   }
 }
