--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.0",
+    "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "feedparser": "^1.1.4",
     "lodash": "^3.10.1",
     "multiline": "^1.0.2",
     "mysql": "^2.9.0",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "uid": "0.0.2",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "db-migrate": "^0.9.23"
