--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fetches rss feeds",
   "main": "app.js",
   "scripts": {
-    "test": "mocha -b test"
+    "test": "mocha -b test",
+    "start": "node app"
   },
   "author": "Roger Madjos <roger.madjos@gmal.com>",
   "license": "ISC",
