--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multiline": "^1.0.2",
     "mysql": "^2.9.0",
     "request": "^2.65.0",
+    "socket.io": "^1.3.7",
     "uid": "0.0.2",
     "uuid": "^2.0.1"
   },
