--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "request": "^2.65.0",
     "socket.io": "^1.3.7",
     "uid": "0.0.2",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "devDependencies": {
-    "db-migrate": "^0.9.23"
+    "db-migrate": "~0.10.0-beta.4",
+    "time-grunt": "~1.2.2",
+    "load-grunt-tasks": "~3.3.0",
+    "db-migrate-mysql": "~1.1.3"
   }
 }
