--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "lodash": "~3.10.1"
   }
 }
