--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "load-grunt-tasks": "~3.3.0",
     "time-grunt": "~1.2.2"
   }
